RESOLVED FIXED147651
Crash when following a Google search link to Twitter with Limit Adult Content enabled
https://bugs.webkit.org/show_bug.cgi?id=147651
Summary Crash when following a Google search link to Twitter with Limit Adult Content...
Brady Eidson
Reported 2015-08-04 14:24:39 PDT
Crash when following a Google search link to Twitter with Limit Adult Content enabled This occurs due to interactions between parental controls and the application cache. Until the design of parental controls (and content filters in general) can be cleaned up, we'll disable main resource loads from the app cache when parental controls are enabled. <rdar://problem/22123707>
Attachments
Patch v1 (3.64 KB, patch)
2015-08-04 14:27 PDT, Brady Eidson
buildbot: commit-queue-
Archive of layout-test-results from ews100 for mac-mavericks (625.73 KB, application/zip)
2015-08-04 15:00 PDT, Build Bot
no flags
Patch with review feedback for landing. (3.22 KB, patch)
2015-08-04 15:34 PDT, Brady Eidson
no flags
Patch (6.21 KB, patch)
2015-08-07 12:42 PDT, Andy Estes
beidson: review+
Patch (12.86 KB, patch)
2015-08-26 13:40 PDT, Andy Estes
no flags
Brady Eidson
Comment 1 2015-08-04 14:27:19 PDT
Created attachment 258211 [details] Patch v1
Build Bot
Comment 2 2015-08-04 15:00:32 PDT
Comment on attachment 258211 [details] Patch v1 Attachment 258211 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/16567 Number of test failures exceeded the failure limit.
Build Bot
Comment 3 2015-08-04 15:00:37 PDT
Created attachment 258217 [details] Archive of layout-test-results from ews100 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-mavericks Platform: Mac OS X 10.9.5
Brady Eidson
Comment 4 2015-08-04 15:15:47 PDT
Sam reviewed this in person. Exploring layout tests before landing.
Brady Eidson
Comment 5 2015-08-04 15:30:26 PDT
I don't reproduce any of these failures locally (nor do the attached failure results actually have the failure diffs) :(
Brady Eidson
Comment 6 2015-08-04 15:34:37 PDT
Created attachment 258220 [details] Patch with review feedback for landing. Give EWS another pass...
Brady Eidson
Comment 7 2015-08-04 16:08:06 PDT
Seems like the failures have cleared up, landing.
Brady Eidson
Comment 8 2015-08-04 16:09:25 PDT
Andy Estes
Comment 9 2015-08-07 11:56:07 PDT
Reopening to try a different approach.
Andy Estes
Comment 10 2015-08-07 12:42:50 PDT
Brady Eidson
Comment 11 2015-08-07 13:01:41 PDT
Comment on attachment 258520 [details] Patch Nice
Andy Estes
Comment 12 2015-08-07 13:10:57 PDT
Andy Estes
Comment 13 2015-08-26 13:40:07 PDT
Reopening to attach new patch.
Andy Estes
Comment 14 2015-08-26 13:40:09 PDT
Andy Estes
Comment 15 2015-08-26 14:13:54 PDT
Comment on attachment 259976 [details] Patch rs=Brady
Andy Estes
Comment 16 2015-08-26 14:16:05 PDT
Note You need to log in before you can comment on or make changes to this bug.