Crash when following a Google search link to Twitter with Limit Adult Content enabled. <rdar://problem/22123707> and https://bugs.webkit.org/show_bug.cgi?id=147651

Reviewed by Sam Weinig.

No new tests (Doesn't occur in a tested config).

For now, we'll skip the application cache for main resource loads if parental controls are enabled.

* loader/DocumentLoader.cpp:
(WebCore::DocumentLoader::willSendRequest):
(WebCore::DocumentLoader::startLoadingMainResource):

Canonical link: https://commits.webkit.org/165722@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187907 268f45cc-cd09-0410-ab3c-d52691b4dbfc